--- a/src/personalPage.html
+++ b/src/personalPage.html
@@ -54,7 +54,7 @@
         <h1>5 TEAM</h1>
       </div>
       <div class="right">
-        <span>Home</span>
+        <a href="index.html"><span>Home</span></a>
         <span> | </span>
         <div class="theme-switch-wrapper">
           <label class="theme-switch" for="theme-toggle">
