--- a/personalPage.html
+++ b/personalPage.html
@@ -18,20 +18,24 @@
 
       // For Firebase JS SDK v7.20.0 and later, measurementId is optional
       const firebaseConfig = {
-        apiKey: "AIzaSyCStuq5djx8bb_v4A6pCYKN6e-wvWjHniU",
-        authDomain: "teamintroduction-practice.firebaseapp.com",
-        projectId: "teamintroduction-practice",
-        storageBucket: "teamintroduction-practice.appspot.com",
-        messagingSenderId: "34184537228",
-        appId: "1:34184537228:web:455265447771a371d607a9",
-        measurementId: "G-0ZDQ69MD5B",
+        apiKey: "AIzaSyBPMReE-tcQ6Bx43oSoizq725rrdQ9Fx9E",
+        authDomain: "sparta-87f88.firebaseapp.com",
+        projectId: "sparta-87f88",
+        storageBucket: "sparta-87f88.appspot.com",
+        messagingSenderId: "296182026935",
+        appId: "1:296182026935:web:f6d094e79ed39d815fb332",
+        measurementId: "G-C7C8MHE9R1",
       };
 
       // Firebase 인스턴스 초기화
       const app = initializeApp(firebaseConfig);
       const db = getFirestore(app);
+
+      fetch("navbar.html")
+        .then((response) => response.text())
+        .then((data) => (document.getElementById("navbar").innerHTML = data));
     </script>
-    <script src="../Js/personalPage/personalPageInit.js"></script>
+    <script src="/Js/personalPage/personalPageInit.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -43,27 +47,7 @@
     <link rel="stylesheet" href="../Css/personalPage.css" />
   </head>
   <body class="whiteTheme">
-    <div class="navbar">
-      <div class="left">
-        <div id="dday">스파르타 종료 : <span id="days">XX</span></div>
-        <div class="screen-weather">
-          <div id="weather"><span></span>℃ (<span></span>)</div>
-        </div>
-      </div>
-      <div class="center-title">
-        <h1>5 TEAM</h1>
-      </div>
-      <div class="right">
-        <a href="index.html"><span>Home</span></a>
-        <span> | </span>
-        <div class="theme-switch-wrapper">
-          <label class="theme-switch" for="theme-toggle">
-            <input type="checkbox" id="theme-toggle" />
-            <div class="slider round"></div>
-          </label>
-        </div>
-      </div>
-    </div>
+    <div id="navbar"></div>
     <div class="mainContainer">
       <main class="container">
         <div
