--- a/personalPage.html
+++ b/personalPage.html
@@ -42,9 +42,8 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../Css/navigation.css" />
-    <link rel="stylesheet" href="../Css/theme.css" />
-    <link rel="stylesheet" href="../Css/personalPage.css" />
+    <link rel="stylesheet" href="Css/theme.css" />
+    <link rel="stylesheet" href="Css/personalPage.css" />
   </head>
   <body class="whiteTheme">
     <div id="navbar"></div>
