--- a/navbar.html
+++ b/navbar.html
@@ -30,5 +30,6 @@
       </div>
     </div>
     <script src="Js/navbar/dday.js"></script>
+    <script src="Js/navbar/weather.js"></script>
   </body>
 </html>
