--- a/navbar.html
+++ b/navbar.html
@@ -31,5 +31,6 @@
     </div>
     <script src="Js/navbar/dday.js"></script>
     <script src="Js/navbar/weather.js"></script>
+    <script src="Js/navbar/theme.js"></script>
   </body>
 </html>
