refactor: 네비게이션js파일 적용 수정

--- a/index.html
+++ b/index.html
@@ -206,5 +206,8 @@
         </div>
       </section>
     </div>
+    <script src="Js/navbar/dday.js"></script>
+    <script src="Js/navbar/weather.js"></script>
+    <script src="Js/navbar/theme.js"></script>
   </body>
 </html>
