refactor: 메인페이지 css 형식 수정

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
   <body class="whiteTheme">
     <div id="navbar"></div>
     <div class="mainContainer">
+      <hr class="featurette-divider" />
       <section class="teamIntroduction">
         <div
           class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary"
@@ -214,6 +215,7 @@
           </div>
         </div>
       </section>
+      <hr class="featurette-divider" />
       <div class="mypostingbox">
         <div class="form-floating mb-3">
           <input
