--- a/personalPage.html
+++ b/personalPage.html
@@ -7,16 +7,14 @@
     <title>개인 소개 페이지</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="module">
-      // Firebase SDK 라이브러리 가져오기
       import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
-      import { getFirestore } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
       import {
-        collection,
-        addDoc,
+        getFirestore,
+        doc,
+        getDoc,
+        updateDoc, // updateDoc 함수를 import 합니다.
       } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
-      import { getDocs } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
 
-      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
       const firebaseConfig = {
         apiKey: "AIzaSyBPMReE-tcQ6Bx43oSoizq725rrdQ9Fx9E",
         authDomain: "sparta-87f88.firebaseapp.com",
@@ -30,6 +28,90 @@
       // Firebase 인스턴스 초기화
       const app = initializeApp(firebaseConfig);
       const db = getFirestore(app);
+      document.addEventListener("DOMContentLoaded", async function () {
+        const urlParams = new URLSearchParams(window.location.search);
+        const memberId = urlParams.get("memberId");
+        const dbRef = doc(db, "members", memberId);
+
+        async function fetchAndRenderMemberData() {
+          const docSnap = await getDoc(dbRef);
+          if (docSnap.exists()) {
+            const memberData = docSnap.data();
+
+            // 기본 정보 및 이미지 렌더링
+            document.getElementById("name").textContent = memberData.name;
+            document.getElementById("profilePic").src =
+              memberData.image || "path/to/default/image.png";
+
+            // 추가 정보 렌더링
+            document.getElementById("displayAge").textContent =
+              memberData.age || "";
+            document.getElementById("displayLocation").textContent =
+              memberData.location || "";
+            document.getElementById("displayMbti").textContent =
+              memberData.mbti || "";
+            document.getElementById("displaySkills").textContent =
+              memberData.skills || "";
+            document.getElementById("displayDevType").textContent =
+              memberData.devType || "";
+            document.getElementById("displayMessage").textContent =
+              memberData.message || "";
+
+            // Edit form에도 데이터 세팅
+            document.getElementById("imageUploadUrl").value =
+              memberData.image || "";
+            document.getElementById("ageInput").value = memberData.age || "";
+            document.getElementById("locationInput").value =
+              memberData.location || "";
+            document.getElementById("mbtiInput").value = memberData.mbti || "";
+            document.getElementById("skillsInput").value =
+              memberData.skills || "";
+            document.getElementById("devTypeInput").value =
+              memberData.devType || "";
+            document.getElementById("messageInput").value =
+              memberData.message || "";
+          } else {
+            console.log("No such document!");
+          }
+        }
+
+        document
+          .getElementById("editProfileBtn")
+          .addEventListener("click", function () {
+            document.getElementById("editForm").style.display = "block";
+            document.getElementById("profile-info").style.display = "none";
+          });
+
+        document
+          .getElementById("saveProfileBtn")
+          .addEventListener("click", async function () {
+            const image = document.getElementById("imageUploadUrl").value;
+            const age = document.getElementById("ageInput").value;
+            const location = document.getElementById("locationInput").value;
+            const mbti = document.getElementById("mbtiInput").value;
+            const skills = document.getElementById("skillsInput").value;
+            const devType = document.getElementById("devTypeInput").value;
+            const message = document.getElementById("messageInput").value;
+
+            const updatedData = {
+              image,
+              age,
+              location,
+              mbti,
+              skills,
+              devType,
+              message,
+            };
+            await updateDoc(dbRef, updatedData);
+
+            // 업데이트 후 정보 다시 불러와서 화면에 표시 (새로고침 없이)
+            fetchAndRenderMemberData();
+            document.getElementById("editForm").style.display = "none";
+            document.getElementById("profile-info").style.display = "block";
+          });
+
+        fetchAndRenderMemberData();
+      });
 
       fetch("navbar.html")
         .then((response) => response.text())
@@ -49,7 +131,7 @@
           document.body.appendChild(script3);
         });
     </script>
-    <script src="Js/personalPage/personalPageInit.js"></script>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -64,47 +146,84 @@
     <div class="mainContainer">
       <hr class="featurette-divider" />
       <div class="main">
-        <p><span id="memberIdDisplay"></span></p>
         <div class="profile">
-          <div class="profile-picture">
-            <img id="profilePic" src="" style="width: 250px; height: 250px" />
+          <div class="left-profile">
+            <span id="name"></span>
+            <div class="profile-picture">
+              <img
+                id="profilePic"
+                src="data:image/jpeg;base64,..."
+                style="width: 300px; height: 300px"
+              />
+            </div>
           </div>
           <div id="profile-info" class="profile-info">
             <div id="infoDisplay">
-              <p>나이: <span id="displayAge"></span></p>
-              <p>사는 곳: <span id="displayLocation"></span></p>
-              <p>MBTI: <span id="displayMbti"></span></p>
-              <p>기술 스택: <span id="displaySkills"></span></p>
-              <p>되고자 하는 개발자: <span id="displayDevType"></span></p>
-              <p>하고 싶은 말: <span id="displayMessage"></span></p>
+              <p>나이 : <span id="displayAge"></span></p>
+              <p>사는 곳 : <span id="displayLocation"></span></p>
+              <p>MBTI : <span id="displayMbti"></span></p>
+              <p>기술 스택 : <span id="displaySkills"></span></p>
+              <p>되고자 하는 개발자 : <span id="displayDevType"></span></p>
+              <p>하고 싶은 말 : <span id="displayMessage"></span></p>
+              <button
+                type="button"
+                id="editProfileBtn"
+                class="btn btn-outline-secondary"
+              >
+                수정하기
+              </button>
             </div>
-            <button
-              type="button"
-              id="editProfileBtn"
-              class="btn btn-outline-secondary"
-            >
-              수정하기
-            </button>
           </div>
+
           <div id="editForm" style="display: none">
-            <!-- 이미지 URL 입력을 위한 input 필드로 변경 -->
             <input type="text" id="imageUploadUrl" placeholder="이미지 주소" />
-            <input type="number" id="ageInput" placeholder="나이" />
-            <input type="text" id="locationInput" placeholder="사는 곳" />
-            <input type="text" id="mbtiInput" placeholder="MBTI" />
-            <input type="text" id="skillsInput" placeholder="기술 스택" />
+            <!-- 이미지 URL이 길 수 있으므로 제한을 200자로 설정 -->
+            <input
+              type="number"
+              id="ageInput"
+              placeholder="나이"
+              maxlength="10"
+            />
+            <input
+              type="text"
+              id="locationInput"
+              placeholder="사는 곳"
+              maxlength="10"
+            />
+            <input
+              type="text"
+              id="mbtiInput"
+              placeholder="MBTI"
+              maxlength="10"
+            />
+            <input
+              type="text"
+              id="skillsInput"
+              placeholder="기술 스택"
+              maxlength="20"
+            />
             <input
               type="text"
               id="devTypeInput"
               placeholder="되고자 하는 개발자"
+              maxlength="20"
             />
-            <textarea id="messageInput" placeholder="하고 싶은 말"></textarea>
-            <button id="saveProfileBtn">저장하기</button>
+            <textarea
+              id="messageInput"
+              placeholder="하고 싶은 말"
+              maxlength="20"
+            ></textarea>
+            <button
+              id="saveProfileBtn"
+              type="button"
+              class="btn btn-outline-primary"
+            >
+              저장하기
+            </button>
           </div>
         </div>
       </div>
       <hr class="featurette-divider" />
     </div>
-    <script src="Js/personalPage/edit.js"></script>
   </body>
 </html>
