feat: 방명록 기능완료, 프로젝트 전체적 기능 완성

--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
       // Firebase 인스턴스 초기화
       const app = initializeApp(firebaseConfig);
       const db = getFirestore(app);
+      $("#addMemberbtn").click(function () {
+        if ($(".mypostingbox").css("display") === "none") {
+          $(".mypostingbox").css("display", "flex");
+        } else {
+          $(".mypostingbox").css("display", "none");
+        }
+      });
 
       $("#addbtn").click(async function () {
         let image = $("#image").val();
@@ -246,6 +253,5 @@
         </button>
       </section>
     </div>
-    <script src="Js/addMember/posting.js"></script>
   </body>
 </html>
